# HandwrittenTextRecognition-Pytorch

./: .gitignore  README.md  decoder.py  pyproject.toml
src/: config.py  create_folds.py  dataset.py  decoder.py  engine.py  loss.py  optim.py  play.py  playground.py  run.py  scratch_1.py  segment.py  train.py  transforms.py  utils.py  validate_segment.py
src/data/.dvc/: config
src/line-det/: create_folds.py  dataset.py  det_config.py  det_utils.py  engine.py  loss.py  model.py  optim.py  train.py  transforms.py
src/line-det/detr/util/: box_ops.py
src/models/: models.py
src/scratch/: scratch.py  scratch_3.py
src/segmentation/: effdet-infer.ipynb  inference-efficientdet.py  training-efficientdet-working.ipynb
