[tool.poetry]
name = "htr"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T <mathewtkevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
pandas = "^2.2.1"
seaborn = "^0.13.2"
scipy = "^1.13.0"
timm = "^0.9.16"
opencv-python = "^4.9.0.80"
numba = "^0.59.1"
albumentations = "^1.4.3"
effdet = "^0.4.1"
nbconvert = "^7.16.3"
tqdm = "^4.66.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
dvc = "^3.49.0"
dvc-gdrive = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[experimental]
max-parallel-jobs = 10