[tool.poetry]
name = "htr"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T <mathewtkevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
pandas = "*"
seaborn = "*"
scipy = "*"
timm = "*"
opencv-python = "*"
numba = "*"
albumentations = "*"
effdet = "*"
nbconvert = "*"
tqdm = "*"
numpy = "*"
matplotlib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[experimental]
max-parallel-jobs = 10