[tool.poetry]
name = "htr"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T <mathewtkevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.1.2"
pandas = "2.2.0"
seaborn = "*"
scipy = "1.13.0"
timm = "*"
opencv-python = "4.9.0.80"
numba = "*"
albumentations = "1.4.3"
effdet = "*"
nbconvert = "7.14.2"
tqdm = "4.65.2"
numpy = "1.26.3"
matplotlib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[experimental]
max-parallel-jobs = 10